[package]
name = "bench"
version = "0.1.0"
authors = ["henrik.forsgren@ri.se <henrik.forsgren@ri.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
concrete="^0.1"
itertools="0.10.3"
TFHE_concurrency = { git = "https://github.com/henrikfo/TFHE_concurrency" }

[dev-dependencies]
concrete="^0.1"
itertools="0.10.3"
criterion = "0.3.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[[bench]]
name = "my_benchmark"
harness = false
